test/src/e2e_vm_tests/test_programs/should_fail/aliased_imports/src/main.sw
script;

mod foo;
mod bar;

use foo::Bar; // Should not work. foo re-exports bar::Bar, but aliased to Baz

fn main() {
    let bar = Bar {
	bar : 42
    };
    bar.bar
}
